Outra maneira de resolver no bônus aplicada no item StackOverFlow

--- a/1-fundamentos/secao-3-introducao-a-html-e-css/dia-3-html-e-css-seletores-e-posicionamento/style5.css
+++ b/1-fundamentos/secao-3-introducao-a-html-e-css/dia-3-html-e-css-seletores-e-posicionamento/style5.css
@@ -29,7 +29,7 @@ ul:nth-of-type(1) li:not(:nth-of-type(n+4)) {
 .bg-pink {
     background-color: pink;
 }
-.stackoverflow:hover {
+li a[href*=stackoverflow]:hover {
     color:orange;
     font-weight: 800;
 }
